<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bg_color"
    android:clipToPadding="false">

    <View
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:title="@string/app_name"
        android:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dialogBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-24dp"
        android:layout_marginBottom="-24dp"
        android:background="@drawable/bg_dialog"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/loginBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pizza"
        app:layout_constraintWidth_max="312dp" />

    <ImageView
        android:id="@+id/pizza"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:elevation="4dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_pizza"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintEnd_toEndOf="@+id/dialogBg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/dialogBg"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:text="@string/shall_we_create"
        android:textColor="?attr/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/subtitle"
        app:layout_constraintEnd_toEndOf="@+id/dialogBg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/dialogBg"
        app:layout_constraintTop_toBottomOf="@+id/pizza" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:text="@string/your_profile"
        android:textColor="?attr/textColor"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/registrationBt"
        app:layout_constraintEnd_toEndOf="@+id/dialogBg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/dialogBg"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrationBt"
        style="@style/OutlinedMaterialDialogButton"
        android:layout_marginTop="10dp"
        android:elevation="4dp"
        android:text="@string/lets"
        app:layout_constraintBottom_toTopOf="@+id/loginBt"
        app:layout_constraintEnd_toEndOf="@+id/dialogBg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/dialogBg"
        app:layout_constraintTop_toBottomOf="@+id/subtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBt"
        style="@style/OutlinedMaterialDialogButton"
        android:elevation="4dp"
        android:text="@string/I_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/dialogBg"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/dialogBg"
        app:layout_constraintTop_toBottomOf="@+id/registrationBt" />

</androidx.constraintlayout.widget.ConstraintLayout>