<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/listImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/list_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/listName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_name"
        app:layout_constraintStart_toEndOf="@+id/listImage"
        app:layout_constraintTop_toTopOf="@+id/listImage"
        android:layout_marginTop="6dp"
        android:layout_marginStart="16dp"
        android:lineSpacingExtra="5sp"
        android:textSize="16sp"
        android:letterSpacing="0.03"/>

    <TextView
        android:id="@+id/listDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="4sp"
        android:text="@string/share_500_out_of_7000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/listName"
        app:layout_constraintTop_toBottomOf="@+id/listName" />

    <TextView
        android:id="@+id/listDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="7dp"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="4sp"
        android:text="@string/_30_12_2222"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>