<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_carousel_lists">

    <TextView
        android:id="@+id/carouselName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/mark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="15dp"/>

    <TextView
        android:id="@+id/carouselLineTop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/line"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/carouselNestedScrollView"
        app:layout_constraintStart_toStartOf="@+id/carouselNestedScrollView"
        app:layout_constraintTop_toBottomOf="@+id/carouselName"
        android:layout_marginHorizontal="25dp"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/carouselNestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/carouselLineBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_min="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carouselLineTop">

        <LinearLayout
            android:id="@+id/carouselLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/carouselLineBottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:text="@string/line_bottom"
        app:layout_constraintBottom_toTopOf="@+id/carouselBarrierLineBottom"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="@+id/carouselNestedScrollView"
        app:layout_constraintStart_toStartOf="@+id/carouselNestedScrollView" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/carouselBarrierLineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="carouselTotal, carouselAmount"/>

    <TextView
        android:id="@+id/carouselTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/total"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@+id/carouselLineBottom" />

    <TextView
        android:id="@+id/carouselAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="5445"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toEndOf="@id/carouselTotal"
        app:layout_constraintHorizontal_bias="1.0"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="@+id/carouselLineBottom" />

</androidx.constraintlayout.widget.ConstraintLayout>